<resources>
    <string name="app_name">GTPB</string>
    <string name="app_name2">Gère tes P&#130;tits Bacs</string>
    <string name="E">EQUIPE</string>
    <string name="J">JOUEUR</string>
    <string name="LJ">VOIR LES JOUEURS</string>
    <string name="LT">VOIR LES EQUIPES</string>
    <string name="NT">NOUVELLE EQUIPE</string>
    <string name="NJ">NOUVEAU JOUEUR</string>
    <string name="P">PARTIE</string>
    <string name="S">STATS</string>
    <string name="Validate">VALIDER</string>
</resources>
